After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 700958 - Cancelling 'Add account' dialog causes criticals/warnings
Cancelling 'Add account' dialog causes criticals/warnings
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
3.8.x
Other Linux
: Normal normal
: ---
Assigned To: Ondrej Holy
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-24 12:48 UTC by Stef Walter
Modified: 2013-06-04 10:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
After the add account dialog is cancelled, discard results (5.85 KB, patch)
2013-05-24 12:48 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2013-05-24 12:48:23 UTC
When in the 'Add account' dialog of the user panel, if click 'Add' and then cancel, I get an abort.

Steps to Reproduce:
1. User panel
2. Unlock
3. [+]
4. Enterprise login
5. Domain: blah.com, User: auou, Password: onuto
6: Add
7: Cancel (while spinner)
  
(gnome-control-center:6040): user-accounts-cc-panel-CRITICAL **: um_realm_manager_discover_finish: assertion `UM_IS_REALM_MANAGER (self)' failed
**
user-accounts-cc-panel:ERROR:um-account-dialog.c:724:on_realm_discover_input: assertion failed: (realms != NULL)

(gdb) bt
  • #0 __GI_raise
    at ../nptl/sysdeps/unix/sysv/linux/raise.c line 56
  • #1 __GI_abort
    at abort.c line 90
  • #2 g_assertion_message
    at gtestutils.c line 1912
  • #3 g_assertion_message_expr
    at gtestutils.c line 1923
  • #4 on_realm_discover_input
    at um-account-dialog.c line 724
  • #5 g_simple_async_result_complete
    at gsimpleasyncresult.c line 777
  • #6 on_provider_discover
    at um-realm-manager.c line 357
  • #7 g_simple_async_result_complete
    at gsimpleasyncresult.c line 777
  • #8 reply_cb
    at gdbusproxy.c line 2632
  • #9 g_simple_async_result_complete
    at gsimpleasyncresult.c line 777
  • #10 g_dbus_connection_call_done
    at gdbusconnection.c line 5333
  • #11 g_simple_async_result_complete
    at gsimpleasyncresult.c line 777
  • #12 complete_in_idle_cb
    at gsimpleasyncresult.c line 789
  • #13 g_main_dispatch
    at gmain.c line 3054
  • #14 g_main_context_dispatch
    at gmain.c line 3630
  • #15 g_main_context_iterate
    at gmain.c line 3701
  • #16 g_main_context_iteration
    at gmain.c line 3762
  • #17 g_application_run
    at gapplication.c line 1623
  • #18 main
    at main.c line 52

Comment 1 Stef Walter 2013-05-24 12:48:55 UTC
Created attachment 245239 [details] [review]
After the add account dialog is cancelled, discard results

When closing the dialog, we cancel the cancellable, but don't
wait for all the async calls to complete before closing the dialog
so discard results when they come in.