user-accounts: After the add account dialog is cancelled, discard results

When closing the dialog, we cancel the cancellable, but don't
wait for all the async calls to complete before closing the dialog
so discard results when they come in.

https://bugzilla.gnome.org/show_bug.cgi?id=700958